# TL-AI

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
docs/: MASTER_SPECIFICATION.md
docs/compiler/: Compiler.md
docs/database/: InitialDataset.md
docs/domain/: EntityModelV2.md
docs/importer/: ImporterArchitecture.md  ManualProvider.md
docs/migration/: V1_to_V2.md
docs/review/: DatasetArchitectureReview.md
schemas/: accessory.schema.json  armor.schema.json  boss.schema.json  buff.schema.json  common.schema.json  entity.schema.json  event.schema.json  formula.schema.json  item.schema.json  monster.schema.json  npc.schema.json  set.schema.json  skill.schema.json  skill_core.schema.json  stat.schema.json  trait.schema.json  weapon.schema.json
specifications/: README.md
specifications/items/accessories/: AbyssalGracePendant.yaml  BandOfUniversalPower.yaml  GildedInfernalWristlet.yaml  ResistanceBelt.yaml
specifications/items/armor/: ArcaneShadowHat.yaml  ArcaneShadowRobes.yaml  ResistanceLeatherBoots.yaml  ResistancePlateGauntlets.yaml  ShockCommanderPlateArmor.yaml  ShockCommanderSabatons.yaml
specifications/items/weapons/: AdentusGargantuanGreatsword.yaml  ExcavatorMysteriousScepter.yaml  KarnixNetherbow.yaml  MinezerokDaggersOfCrippling.yaml  NirmaSwordOfEchoes.yaml  ResistanceGreatsword.yaml  ResistanceLongbow.yaml  TalusCrystallineStaff.yaml
specifications/sets/: ArcaneShadow.yaml  ShockCommander.yaml
specifications/skill_cores/: PowerCore.yaml  RuinCore.yaml  SwiftCore.yaml
specifications/skills/: CurseExplosion.yaml  GiganticImpact.yaml  GuillotineBlade.yaml  JudgmentLightning.yaml  Strafing.yaml  ZephyrsNock.yaml
specifications/traits/: AttackSpeed.yaml  CooldownSpeed.yaml  CriticalHitChance.yaml  HeavyAttackChance.yaml  HitChance.yaml  ManaRegen.yaml  MaxHealth.yaml  MeleeEvasion.yaml
src/tl_compiler/: __init__.py  config.py  pipeline.py
src/tl_compiler/cli/: __init__.py  main.py
src/tl_compiler/generators/: __init__.py  manifest.py
src/tl_compiler/ir/: __init__.py  builder.py  model.py
src/tl_compiler/parser/: __init__.py  loader.py
src/tl_compiler/resolver/: __init__.py  index.py
src/tl_compiler/validator/: __init__.py  issues.py  references.py  report.py  schema.py  semantic.py  stable_id.py
src/tl_database/: __init__.py  base.py  session.py
src/tl_database/migrations/: env.py
src/tl_database/models/: __init__.py  associations.py  buff.py  entity.py  formula.py  item.py  monster.py  npc.py  patch.py  set_bonus.py  skill.py  source.py  stat.py  trait.py
src/tl_database/repositories/: __init__.py
src/tl_importer/: __init__.py  models.py  service.py  statistics.py
src/tl_importer/cli/: __init__.py  import_main.py  main.py
src/tl_importer/importers/: __init__.py  base.py  database.py
src/tl_importer/mapping/: __init__.py  base.py
src/tl_importer/normalizers/: __init__.py  base.py
src/tl_importer/parsers/: __init__.py  base.py
src/tl_importer/pipeline/: __init__.py  pipeline.py
src/tl_importer/providers/: __init__.py  base.py  manual.py
src/tl_importer/validators/: __init__.py  base.py
tests/: test_smoke.py
tests/compiler/: conftest.py  test_cli.py  test_ir.py  test_manifest.py  test_parser.py  test_validators.py
tests/importer/: conftest.py  test_interfaces.py  test_manual_import.py  test_models.py  test_pipeline.py  test_statistics.py
(+2 files in other folders)
