[project]
name = "tl-ai"
version = "0.1.0"
description = "TL-AI project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ruff",
    "black",
    "mypy",
    "pytest",
    "pytest-cov",
    "pre-commit",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
packages = [
    "tl_core",
    "tl_database",
    "tl_api",
    "tl_compiler",
    "tl_simulator",
    "tl_studio",
    "tl_lab",
    "tl_common",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]
