[project]
name = "tl-ai"
version = "0.1.0"
description = "TL-AI project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "pgvector>=0.5.0",
    "psycopg[binary]>=3.3.4",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "ruff",
    "black",
    "mypy",
    "pytest",
    "pytest-cov",
    "pre-commit",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/tl_database/models/*.py" = ["RUF012"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
packages = [
    "tl_core",
    "tl_database",
    "tl_api",
    "tl_compiler",
    "tl_simulator",
    "tl_studio",
    "tl_lab",
    "tl_common",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]
