[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tl-ai"
version = "0.1.0"
description = "TL-AI project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "jsonschema>=4.26.0",
    "pgvector>=0.5.0",
    "psycopg[binary]>=3.3.4",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.51",
]

[project.scripts]
tl-ai = "tl_compiler.cli.main:run"

[tool.hatch.build.targets.wheel]
packages = [
    "src/tl_core",
    "src/tl_database",
    "src/tl_api",
    "src/tl_compiler",
    "src/tl_simulator",
    "src/tl_studio",
    "src/tl_lab",
    "src/tl_common",
]

[dependency-groups]
dev = [
    "ruff",
    "black",
    "mypy",
    "pytest",
    "pytest-cov",
    "pre-commit",
    "types-pyyaml>=6.0.12.20260518",
    "types-jsonschema>=4.26.0.20260518",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/tl_database/models/*.py" = ["RUF012"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
packages = [
    "tl_core",
    "tl_database",
    "tl_api",
    "tl_compiler",
    "tl_simulator",
    "tl_studio",
    "tl_lab",
    "tl_common",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]
